release/rosmod_v0.2/ros_tools/grammar/03-Deployment/DeploymentParser.py
# Generated from java-escape by ANTLR 4.4
from __future__ import print_function
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .DeploymentListener import DeploymentListener
else:
    from DeploymentListener import DeploymentListener

class DeploymentParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    EOF = Token.EOF
    T__17=1
    T__16=2
    T__15=3
    T__14=4
    T__13=5
    T__12=6
    T__11=7
    T__10=8
    T__9=9
    T__8=10
    T__7=11
    T__6=12
    T__5=13
    T__4=14
    T__3=15
    T__2=16
    T__1=17
    T__0=18
    IDENT=19
    WS=20
    COMMENT=21
    LINE_COMMENT=22

    tokenNames = [ u"<INVALID>", u"'reference '", u"'cmdline_arguments '", 
                   u"'group'", u"'='", u"'node_instance '", u"';'", u"'using '", 
                   u"'nodes'", u"'sshkey '", u"' '", u"'{'", u"'username '", 
                   u"'ENV '", u"'host_instance '", u"'init '", u"'properties'", 
                   u"'}'", u"'\"'", u"IDENT", u"WS", u"COMMENT", u"LINE_COMMENT" ]

    RULE_start = 0
    RULE_use_hardware_config = 1
    RULE_hardware = 2
    RULE_deployment = 3
    RULE_node_host_mapping = 4
    RULE_hostname = 5
    RULE_properties = 6
    RULE_username = 7
    RULE_username_string = 8
    RULE_local_sshkey = 9
    RULE_sshkey_path = 10
    RULE_init = 11
    RULE_init_path = 12
    RULE_env_variables = 13
    RULE_env_name = 14
    RULE_env_value = 15
    RULE_node_instances = 16
    RULE_nodes = 17
    RULE_node = 18
    RULE_arguments = 19
    RULE_node_alias = 20
    RULE_connections = 21
    RULE_group = 22
    RULE_group_id = 23
    RULE_port = 24

    ruleNames =  [ u"start", u"use_hardware_config", u"hardware", u"deployment", 
                   u"node_host_mapping", u"hostname", u"properties", u"username", 
                   u"username_string", u"local_sshkey", u"sshkey_path", 
                   u"init", u"init_path", u"env_variables", u"env_name", 
                   u"env_value", u"node_instances", u"nodes", u"node", u"arguments", 
                   u"node_alias", u"connections", u"group", u"group_id", 
                   u"port" ]

    def __init__(self, input):
        super(DeploymentParser, self).__init__(input)
        self.checkVersion("4.4")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DeploymentParser.StartContext, self).__init__(parent, invokingState)
            self.parser = parser

        def connections(self):
            return self.getTypedRuleContext(DeploymentParser.ConnectionsContext,0)


        def EOF(self):
            return self.getToken(DeploymentParser.EOF, 0)

        def deployment(self):
            return self.getTypedRuleContext(DeploymentParser.DeploymentContext,0)


        def use_hardware_config(self):
            return self.getTypedRuleContext(DeploymentParser.Use_hardware_configContext,0)


        def getRuleIndex(self):
            return DeploymentParser.RULE_start

        def enterRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.enterStart(self)

        def exitRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.exitStart(self)




    def start(self):

        localctx = DeploymentParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50 
            self.use_hardware_config()

            self.state = 51 
            self.deployment()

            self.state = 52 
            self.connections()
            self.state = 53
            self.match(self.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Use_hardware_configContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DeploymentParser.Use_hardware_configContext, self).__init__(parent, invokingState)
            self.parser = parser

        def hardware(self):
            return self.getTypedRuleContext(DeploymentParser.HardwareContext,0)


        def getRuleIndex(self):
            return DeploymentParser.RULE_use_hardware_config

        def enterRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.enterUse_hardware_config(self)

        def exitRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.exitUse_hardware_config(self)




    def use_hardware_config(self):

        localctx = DeploymentParser.Use_hardware_configContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_use_hardware_config)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(self.T__11)
            self.state = 56 
            self.hardware()
            self.state = 57
            self.match(self.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HardwareContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DeploymentParser.HardwareContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i=None):
            if i is None:
                return self.getTokens(DeploymentParser.IDENT)
            else:
                return self.getToken(DeploymentParser.IDENT, i)

        def getRuleIndex(self):
            return DeploymentParser.RULE_hardware

        def enterRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.enterHardware(self)

        def exitRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.exitHardware(self)




    def hardware(self):

        localctx = DeploymentParser.HardwareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_hardware)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DeploymentParser.T__8:
                self.state = 59
                self.match(self.T__8)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DeploymentParser.IDENT:
                self.state = 65
                self.match(self.IDENT)
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DeploymentParser.T__8:
                    self.state = 66
                    self.match(self.T__8)
                    self.state = 71
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeploymentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DeploymentParser.DeploymentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def node_host_mapping(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(DeploymentParser.Node_host_mappingContext)
            else:
                return self.getTypedRuleContext(DeploymentParser.Node_host_mappingContext,i)


        def getRuleIndex(self):
            return DeploymentParser.RULE_deployment

        def enterRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.enterDeployment(self)

        def exitRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.exitDeployment(self)




    def deployment(self):

        localctx = DeploymentParser.DeploymentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_deployment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DeploymentParser.T__4:
                self.state = 77 
                self.node_host_mapping()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Node_host_mappingContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DeploymentParser.Node_host_mappingContext, self).__init__(parent, invokingState)
            self.parser = parser

        def node_instances(self):
            return self.getTypedRuleContext(DeploymentParser.Node_instancesContext,0)


        def properties(self):
            return self.getTypedRuleContext(DeploymentParser.PropertiesContext,0)


        def hostname(self):
            return self.getTypedRuleContext(DeploymentParser.HostnameContext,0)


        def getRuleIndex(self):
            return DeploymentParser.RULE_node_host_mapping

        def enterRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.enterNode_host_mapping(self)

        def exitRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.exitNode_host_mapping(self)




    def node_host_mapping(self):

        localctx = DeploymentParser.Node_host_mappingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_node_host_mapping)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(self.T__4)
            self.state = 84 
            self.hostname()
            self.state = 85
            self.match(self.T__7)

            self.state = 86 
            self.properties()

            self.state = 87 
            self.node_instances()
            self.state = 88
            self.match(self.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HostnameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DeploymentParser.HostnameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i=None):
            if i is None:
                return self.getTokens(DeploymentParser.IDENT)
            else:
                return self.getToken(DeploymentParser.IDENT, i)

        def getRuleIndex(self):
            return DeploymentParser.RULE_hostname

        def enterRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.enterHostname(self)

        def exitRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.exitHostname(self)




    def hostname(self):

        localctx = DeploymentParser.HostnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_hostname)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DeploymentParser.T__8:
                self.state = 90
                self.match(self.T__8)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DeploymentParser.IDENT:
                self.state = 96
                self.match(self.IDENT)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DeploymentParser.T__8:
                    self.state = 97
                    self.match(self.T__8)
                    self.state = 102
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PropertiesContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DeploymentParser.PropertiesContext, self).__init__(parent, invokingState)
            self.parser = parser

        def env_variables(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(DeploymentParser.Env_variablesContext)
            else:
                return self.getTypedRuleContext(DeploymentParser.Env_variablesContext,i)


        def username(self):
            return self.getTypedRuleContext(DeploymentParser.UsernameContext,0)


        def local_sshkey(self):
            return self.getTypedRuleContext(DeploymentParser.Local_sshkeyContext,0)


        def init(self):
            return self.getTypedRuleContext(DeploymentParser.InitContext,0)


        def getRuleIndex(self):
            return DeploymentParser.RULE_properties

        def enterRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.enterProperties(self)

        def exitRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.exitProperties(self)




    def properties(self):

        localctx = DeploymentParser.PropertiesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_properties)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(self.T__2)
            self.state = 109
            self.match(self.T__7)

            self.state = 110 
            self.username()

            self.state = 111 
            self.local_sshkey()

            self.state = 112 
            self.init()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DeploymentParser.T__5:
                self.state = 113 
                self.env_variables()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 119
            self.match(self.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UsernameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DeploymentParser.UsernameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def username_string(self):
            return self.getTypedRuleContext(DeploymentParser.Username_stringContext,0)


        def getRuleIndex(self):
            return DeploymentParser.RULE_username

        def enterRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.enterUsername(self)

        def exitRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.exitUsername(self)




    def username(self):

        localctx = DeploymentParser.UsernameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_username)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(self.T__6)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DeploymentParser.T__8:
                self.state = 122
                self.match(self.T__8)
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 128
            self.match(self.T__14)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DeploymentParser.T__8:
                self.state = 129
                self.match(self.T__8)
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 135
            self.match(self.T__0)
            self.state = 136 
            self.username_string()
            self.state = 137
            self.match(self.T__0)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DeploymentParser.T__8:
                self.state = 138
                self.match(self.T__8)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self.match(self.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Username_stringContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DeploymentParser.Username_stringContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i=None):
            if i is None:
                return self.getTokens(DeploymentParser.IDENT)
            else:
                return self.getToken(DeploymentParser.IDENT, i)

        def getRuleIndex(self):
            return DeploymentParser.RULE_username_string

        def enterRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.enterUsername_string(self)

        def exitRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.exitUsername_string(self)




    def username_string(self):

        localctx = DeploymentParser.Username_stringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_username_string)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DeploymentParser.T__8:
                self.state = 146
                self.match(self.T__8)
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DeploymentParser.IDENT:
                self.state = 152
                self.match(self.IDENT)
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DeploymentParser.T__8:
                    self.state = 153
                    self.match(self.T__8)
                    self.state = 158
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 163
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Local_sshkeyContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DeploymentParser.Local_sshkeyContext, self).__init__(parent, invokingState)
            self.parser = parser

        def sshkey_path(self):
            return self.getTypedRuleContext(DeploymentParser.Sshkey_pathContext,0)


        def getRuleIndex(self):
            return DeploymentParser.RULE_local_sshkey

        def enterRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.enterLocal_sshkey(self)

        def exitRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.exitLocal_sshkey(self)




    def local_sshkey(self):

        localctx = DeploymentParser.Local_sshkeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_local_sshkey)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(self.T__9)
            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DeploymentParser.T__8:
                self.state = 165
                self.match(self.T__8)
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 171
            self.match(self.T__14)
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DeploymentParser.T__8:
                self.state = 172
                self.match(self.T__8)
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 178
            self.match(self.T__0)
            self.state = 179 
            self.sshkey_path()
            self.state = 180
            self.match(self.T__0)
            self.state = 184
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DeploymentParser.T__8:
                self.state = 181
                self.match(self.T__8)
                self.state = 186
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 187
            self.match(self.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Sshkey_pathContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DeploymentParser.Sshkey_pathContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(DeploymentParser.IDENT, 0)

        def getRuleIndex(self):
            return DeploymentParser.RULE_sshkey_path

        def enterRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.enterSshkey_path(self)

        def exitRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.exitSshkey_path(self)




    def sshkey_path(self):

        localctx = DeploymentParser.Sshkey_pathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_sshkey_path)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(self.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InitContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DeploymentParser.InitContext, self).__init__(parent, invokingState)
            self.parser = parser

        def init_path(self):
            return self.getTypedRuleContext(DeploymentParser.Init_pathContext,0)


        def getRuleIndex(self):
            return DeploymentParser.RULE_init

        def enterRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.enterInit(self)

        def exitRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.exitInit(self)




    def init(self):

        localctx = DeploymentParser.InitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_init)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 216
            _la = self._input.LA(1)
            if _la==DeploymentParser.T__3:
                self.state = 191
                self.match(self.T__3)
                self.state = 195
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DeploymentParser.T__8:
                    self.state = 192
                    self.match(self.T__8)
                    self.state = 197
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 198
                self.match(self.T__14)
                self.state = 202
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DeploymentParser.T__8:
                    self.state = 199
                    self.match(self.T__8)
                    self.state = 204
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 205
                self.match(self.T__0)
                self.state = 206 
                self.init_path()
                self.state = 207
                self.match(self.T__0)
                self.state = 211
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DeploymentParser.T__8:
                    self.state = 208
                    self.match(self.T__8)
                    self.state = 213
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 214
                self.match(self.T__12)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Init_pathContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DeploymentParser.Init_pathContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(DeploymentParser.IDENT, 0)

        def getRuleIndex(self):
            return DeploymentParser.RULE_init_path

        def enterRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.enterInit_path(self)

        def exitRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.exitInit_path(self)




    def init_path(self):

        localctx = DeploymentParser.Init_pathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_init_path)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 218
            self.match(self.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Env_variablesContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DeploymentParser.Env_variablesContext, self).__init__(parent, invokingState)
            self.parser = parser

        def env_value(self):
            return self.getTypedRuleContext(DeploymentParser.Env_valueContext,0)


        def env_name(self):
            return self.getTypedRuleContext(DeploymentParser.Env_nameContext,0)


        def getRuleIndex(self):
            return DeploymentParser.RULE_env_variables

        def enterRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.enterEnv_variables(self)

        def exitRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.exitEnv_variables(self)




    def env_variables(self):

        localctx = DeploymentParser.Env_variablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_env_variables)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 220
            self.match(self.T__5)
            self.state = 221 
            self.env_name()
            self.state = 225
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DeploymentParser.T__8:
                self.state = 222
                self.match(self.T__8)
                self.state = 227
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 228
            self.match(self.T__14)
            self.state = 232
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DeploymentParser.T__8:
                self.state = 229
                self.match(self.T__8)
                self.state = 234
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 235
            self.match(self.T__0)
            self.state = 236 
            self.env_value()
            self.state = 237
            self.match(self.T__0)
            self.state = 241
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DeploymentParser.T__8:
                self.state = 238
                self.match(self.T__8)
                self.state = 243
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 244
            self.match(self.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Env_nameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DeploymentParser.Env_nameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i=None):
            if i is None:
                return self.getTokens(DeploymentParser.IDENT)
            else:
                return self.getToken(DeploymentParser.IDENT, i)

        def getRuleIndex(self):
            return DeploymentParser.RULE_env_name

        def enterRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.enterEnv_name(self)

        def exitRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.exitEnv_name(self)




    def env_name(self):

        localctx = DeploymentParser.Env_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_env_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 249
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,24,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 246
                    self.match(self.T__8) 
                self.state = 251
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,24,self._ctx)

            self.state = 261
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DeploymentParser.IDENT:
                self.state = 252
                self.match(self.IDENT)
                self.state = 256
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,25,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 253
                        self.match(self.T__8) 
                    self.state = 258
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,25,self._ctx)

                self.state = 263
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Env_valueContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DeploymentParser.Env_valueContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i=None):
            if i is None:
                return self.getTokens(DeploymentParser.IDENT)
            else:
                return self.getToken(DeploymentParser.IDENT, i)

        def getRuleIndex(self):
            return DeploymentParser.RULE_env_value

        def enterRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.enterEnv_value(self)

        def exitRule(self, listener):
            if isinstance( listener, DeploymentListener ):
                listener.exitEnv_value(self)




    def env_value(self):

        localctx = DeploymentParser.Env_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_env_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 267
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DeploymentParser.T__8:
                self.state = 264
                self.match(self.T__8)
                self.state = 269
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 279
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DeploymentParser.IDENT:
                self.state = 270
                self.match(self.IDENT)
                self.state = 274
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DeploymentParser.T__8:
                    self.state = 271
                    self.match(self.T__8)
                    self.state = 276
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 281
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Node_instancesContext(ParserRuleContext):
